--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,9 @@ streamlit-extras
 seaborn
 altair
 scikit-learn
+ydata-profiling
 streamlit-option-menu
 pkg_resources
 setuptools
 wheel
 pyspark
-
-
