--- a/requirements.txt
+++ b/requirements.txt
@@ -5,9 +5,7 @@ streamlit-extras
 seaborn
 altair
 scikit-learn
-ydata-profiling
+ydata-profiling[notebook]
 streamlit-option-menu
-pkg_resources
 setuptools
 wheel
-pyspark
